The change language selector has been removed from the navigation list to the left. That makes this selector visible on mobile devices now.

--- a/trailer.html
+++ b/trailer.html
@@ -13,10 +13,16 @@
 <body class="blood">
 
   <div class="container">
-    <header class="header actors__page--header">
+    <header class="header">
       <a href="index.html" class="logo__link">
         <img class="logo__image" src="images/logo.png" alt="logo: Venom" width="46" height="71">
       </a>
+      <p class="nav__menu--item">
+        <select class="change-lang">
+          <option class="change-lang--option" value="ru" selected>RU</option>
+          <option class="change-lang--option" value="en">EN</option>
+        </select>
+      </p>
       <nav class="nav">
         <butoon class="menu__button">
           <span class="menu__button--text" data-translate="menu-menu">меню</span>
@@ -43,13 +49,6 @@
 
           <li class="nav__menu--item">
             <a class="nav__menu--link" data-translate="menu-premiere" href="premiere.html">премьера</a>
-          </li>
-
-          <li class="nav__menu--item">
-            <select class="change-lang">
-              <option class="change-lang--option" value="ru" selected>RU</option>
-              <option class="change-lang--option" value="en">EN</option>
-            </select>
           </li>
         </ul>
         <!-- /.nav__menu -->
