changeLanguage.js has been refactoring. Now selected language would be simultaneously changed on all pages of the website. LocalStorage has been used for that effect.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </a>
       <p class="nav__menu--item">
         <select class="change-lang">
-          <option class="change-lang--option" value="ru" selected>RU</option>
+          <option class="change-lang--option" value="ru">RU</option>
           <option class="change-lang--option" value="en">EN</option>
         </select>
       </p>
