Fetching the language translation from the server (https://api.jsonbin.io/) has been made. Added the rule that the widget consultant on all of the pages except premiere.html and privacy-rus.html (in main.js). JavaScript launches in HTML files have been removed from the end by the beginning of an HTML code, and attributes defer and async have been added to them.

--- a/actors.html
+++ b/actors.html
@@ -6,8 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title data-translate="actors-title">Venom 2. Актеры</title>
+  <link rel="stylesheet" href="css/jquery.fancybox.min.css" />
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+  <script async src="js/jquery.fancybox.min.js"></script>
+  <script defer src="js/changeLanguage.js"></script>
+  <script defer src="js/main.js" type="module"></script>
 </head>
 
 <body class="primary-bg">
@@ -203,12 +208,6 @@
   </div>
   <!-- /.container -->
 
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
-  <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
-
-  <script src="js/main.js" type="module"></script>
-  <script src="js/changeLanguage.js" type="module"></script>
 </body>
 
 </html>
