--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
   <link rel="stylesheet" href="css/jquery.fancybox.min.css" />
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+  <script async src="js/jquery.fancybox.min.js"></script>
+  <script defer src="js/changeLanguage.js"></script>
+  <script defer src="js/main.js" type="module"></script>
 </head>
 
 <body class="blood">
@@ -92,11 +96,6 @@
 
   <img class="venom" src="images/venom.png" alt="photo: venom">
 
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
-  <script src="js/jquery.fancybox.min.js"></script>
-
-  <script src="js/main.js" type="module"></script>
-  <script src="js/changeLanguage.js" type="module"></script>
 </body>
 
 </html>
