--- a/about.html
+++ b/about.html
@@ -6,8 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title data-translate="about-title">Venom 2. О фильме</title>
+  <link rel="stylesheet" href="css/jquery.fancybox.min.css" />
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+  <script async src="js/jquery.fancybox.min.js"></script>
+  <script defer src="js/changeLanguage.js"></script>
+  <script defer src="js/main.js" type="module"></script>
 </head>
 
 <body class="primary-bg">
@@ -130,12 +135,6 @@
   </div>
   <!-- /.container -->
 
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
-  <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
-
-  <script src="js/main.js" type="module"></script>
-  <script src="js/changeLanguage.js" type="module"></script>
 </body>
 
 </html>
