--- a/premiere.html
+++ b/premiere.html
@@ -6,8 +6,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title data-translate="premiere-title">Venom 2. Премьера</title>
+  <link rel="stylesheet" href="css/jquery.fancybox.min.css" />
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+  <script async src="js/jquery.fancybox.min.js"></script>
+  <script defer src="js/changeLanguage.js"></script>
+  <script defer src="js/main.js" type="module"></script>
+  <script async src="https://e-timer.ru/js/etimer.js"></script>
+  <script async src="js/eTimer.js"></script>
 </head>
 
 <body class="primary-bg">
@@ -114,13 +121,6 @@
     </div>
     <!-- /.content -->
 
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
-    <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
-    <script src="https://e-timer.ru/js/etimer.js"></script>
-    <script src="js/eTimer.js"></script>
-    <script src="js/main.js"></script>
-    <script src="js/changeLanguage.js" type="module"></script>
 </body>
 
 </html>
