--- a/privacy-rus.html
+++ b/privacy-rus.html
@@ -14,9 +14,10 @@
   <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#000000">
   <meta name="msapplication-TileColor" content="#000000">
   <meta name="theme-color" content="#000000">
-  <link rel="stylesheet" href="css/jquery.fancybox.min.css" />
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
+  <script src="js/changeLanguage.js" defer></script>
+  <script defer src="js/main.js" type="module"></script>
 </head>
 
 <body class="blood">
@@ -607,7 +608,7 @@
 
   </div>
   <!-- /.container -->
-  <script src="js/changeLanguage.js" type="module"></script>
+
 </body>
 
 </html>
