--- a/trailer.html
+++ b/trailer.html
@@ -6,8 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title data-translate="trailer-title">Venom 2. Трейлер</title>
+  <link rel="stylesheet" href="css/jquery.fancybox.min.css" />
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+  <script async src="js/jquery.fancybox.min.js"></script>
+  <script defer src="js/changeLanguage.js"></script>
+  <script defer src="js/main.js" type="module"></script>
 </head>
 
 <body class="blood">
@@ -68,13 +73,6 @@
   </div>
   <!-- /.container -->
 
-  <img class="venom" src="images/venom.png" alt="photo: venom">
-
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
-  <script src="js/jquery.fancybox.min.js"></script>
-
-  <script src="js/main.js" type="module"></script>
-  <script src="js/changeLanguage.js" type="module"></script>
 </body>
 
 </html>
