Refactoring of iFrame for better loading on the webpage. That's why youtubeFrame.js file has been added and HTML, CSS code has been changed. Encapsulation of the output youtubeFrame.js, widgetConsultant.js, changeLanguage.js into main.js

--- a/actors.html
+++ b/actors.html
@@ -6,13 +6,20 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title data-translate="actors-title">Venom 2. Актеры</title>
+  <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-touch-icon.png">
+  <link rel="icon" href="favicon/favicon.ico" type="image/x-icon">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+  <link rel="manifest" href="favicon/site.webmanifest">
+  <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#000000">
+  <meta name="msapplication-TileColor" content="#000000">
+  <meta name="theme-color" content="#000000">
   <link rel="stylesheet" href="css/jquery.fancybox.min.css" />
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
-  <script async src="js/jquery.fancybox.min.js"></script>
-  <script defer src="js/changeLanguage.js"></script>
   <script defer src="js/main.js" type="module"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+  <script defer src="js/jquery.fancybox.min.js"></script>
 </head>
 
 <body class="primary-bg">
