--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
   <link rel="stylesheet" href="css/jquery.fancybox.min.css" />
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
-  <script async src="js/jquery.fancybox.min.js"></script>
-  <script defer src="js/changeLanguage.js"></script>
   <script defer src="js/main.js" type="module"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+  <script defer src="js/jquery.fancybox.min.js"></script>
 </head>
 
 <body class="blood">
