--- a/premiere.html
+++ b/premiere.html
@@ -6,15 +6,20 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title data-translate="premiere-title">Venom 2. Премьера</title>
-  <link rel="stylesheet" href="css/jquery.fancybox.min.css" />
+  <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-touch-icon.png">
+  <link rel="icon" href="favicon/favicon.ico" type="image/x-icon">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+  <link rel="manifest" href="favicon/site.webmanifest">
+  <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#000000">
+  <meta name="msapplication-TileColor" content="#000000">
+  <meta name="theme-color" content="#000000">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
-  <script async src="js/jquery.fancybox.min.js"></script>
-  <script defer src="js/changeLanguage.js"></script>
   <script defer src="js/main.js" type="module"></script>
-  <script async src="https://e-timer.ru/js/etimer.js"></script>
-  <script async src="js/eTimer.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+  <script defer src="https://e-timer.ru/js/etimer.js"></script>
+  <script defer src="js/eTimer.js"></script>
 </head>
 
 <body class="primary-bg">
@@ -105,7 +110,7 @@
               <button data-translate="form-send">Отправить</button>
             </fieldset>
             <div class="order-ticket__preloader-wrapper">
-              <video loop muted autoplay playsinline src="images/6.mp4" type="video/mp4"></video>
+              <video loop muted autoplay playsinline src="images/sendFormVideo.mp4" type="video/mp4"></video>
             </div>
             <fieldset class="order-ticket__thanks-wrapper">
               <legend data-translate="form-thanks">Спасибо <span class="order-ticket__thanks-name"
