--- a/trailer.html
+++ b/trailer.html
@@ -6,13 +6,21 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title data-translate="trailer-title">Venom 2. Трейлер</title>
+  <link rel="preconnect" href="https://www.youtube.com/embed/kOF4p_bCLJs">
+  <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-touch-icon.png">
+  <link rel="icon" href="favicon/favicon.ico" type="image/x-icon">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+  <link rel="manifest" href="favicon/site.webmanifest">
+  <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#000000">
+  <meta name="msapplication-TileColor" content="#000000">
+  <meta name="theme-color" content="#000000">
   <link rel="stylesheet" href="css/jquery.fancybox.min.css" />
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
-  <script async src="js/jquery.fancybox.min.js"></script>
-  <script defer src="js/changeLanguage.js"></script>
   <script defer src="js/main.js" type="module"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+  <script defer src="js/jquery.fancybox.min.js"></script>
 </head>
 
 <body class="blood">
@@ -63,10 +71,7 @@
     <div class="movie">
       <span class="movie__date" data-translate="movie-date-full">16 сентября 2021 в кинотеатрах</span>
       <div class="embed__trailer">
-        <iframe class="iframe" src="https://www.youtube.com/embed/kOF4p_bCLJs" title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen></iframe>
+        <div class="youtube" id="kOF4p_bCLJs"></div>
       </div>
     </div>
     <!-- /.movie -->
