The Rule of text translate for eTimer has been added

--- a/premiere.html
+++ b/premiere.html
@@ -74,7 +74,8 @@
         <p class="content__text" data-translate="movie-description">В настырном журналисте по-прежнему живет симбиот.
           Том Харди в образе обаятельного
           суперзлодея из комиксов Marvel.</p>
-        <div class="eTimer"></div>
+        <div class="eTimerRu"></div>
+        <div class="eTimerEn"></div>
       </div>
       <!-- /.col -->
 
