README.md and LICENSE.txt have been added.Оставшиеся файлы в формате .jpg переведены в формат .webp. And also small refactorings.

--- a/about.html
+++ b/about.html
@@ -110,7 +110,7 @@
       <!-- /.col -->
       <div class="col">
         <div class="poster__wrapper">
-          <img class="poster" src="images/poster.jpg" alt="photo: poster venom 2">
+          <img class="poster" src="images/poster.webp" alt="photo: poster venom 2">
           <div class="creators">
             <h3 class="content__subtitle" data-translate="director">Режиссер</h3>
             <ul class="list">
