--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <img class="button__icon" src="images/play.svg" alt="icon: play" width="15px" height="15px">
           <span class="button__text" data-translate="watch-trailer-button">смотреть трейлер</span>
         </a>
-        <a href="trailer.html" class="button button__link">
+        <a href="premiere.html" class="button button__link">
           <img class="button__icon" src="images/ticket.svg" alt="icon: ticket" width="15px" height="15px">
           <span class="button__text" data-translate="premiere-tickets-button">билеты на премьеру</span>
         </a>
